# Jumble

./: 404.html  CMakeLists.txt  ConfigureCompilerFlags.cmake  Doxyfile  GNUmakefile  JumbleConfig.cmake.in  README.md  array_copy.f  array_copy.f90  assert.f90  avg_mag.f  compare.f  compare.f90  compare.h  count_lines.f90  count_substrings.f90  csvread.f90  csvread.h  cumsum.f  depend.mk  diagadd.f  geop.f  get_command_arg_dyn.f  get_command_arg_dyn.f90  get_diag.f  get_diag.f90  greg2jd.f90  ifirstloc.f90  imaxloc.f  iminloc.f  index.html  installation.md~  iso_varying_string.f  iso_varying_string.f90  jumble.f  jumble.f90  lower_triangle.f  mkdocs.yml  nr_util.f  nr_util.f90  (+36 more)
Input_output/: CMakeLists.txt  count_values.f90  csvread.f90  csvread.h  get_command_arg_dyn.f90  new_unit.f90  pr_matrix.f90  read_column.f90  read_column.h  read_opcol.f90  readline.f90  test_csvread.csv  test_csvread.f90  test_read_column.f90  test_read_column.txt  test_readline.f90
NR_util/: CMakeLists.txt  GNUmakefile  abort.F90  arth.f90  assert.f90  assert_eq.f90  diagadd.f90  diagmult.f90  geop.f90  index.html  nrerror.f90  nrtype.F90  outerand.f90  outerdiff.f90  poly.f90  scatter_max.f90  swap.f90  test_ifirstloc.f90  test_nr_util.f90  unit_matrix.f90
Numerical/: CMakeLists.txt  argwhere.f  argwhere.f90  averge.f90  avg_mag.f90  differ_s.f90  divisors.f  divisors.f90  dtridgl.f  ediff1d.f90  get_divisors.f  mean.f90  pack_indices.f  quadrat.f90  spherical.f90  test_divisors.f90  test_quadrat.f90
Numerical/Lin_2d_real/: CMakeLists.txt  Read_me  determin.f90  eigval.f  eigvect.f90  inv_mat.f  set2lin.f  test_eigval.f90
Sources/: assert.f  assert_eq.f  avg_mag.f  compare.f  csvread.f  cumprod.f  diagmult.f  geop.f  get_command_arg_dyn.f  ifirstloc.f  jumble.f  lower_triangle.f  new_unit.f  nrtype.F  outerand.f  outerprod.f  outersum.f  point.f  poly_term.f  put_diag.f  read_column.f  reallocate.f  scatter_max.f  uniq.f  unit_matrix.f  vabs.f
Sources/Numerical/: averge.f  dtridgl.f  ediff1d.f  pack_indices.f  quadrat.f  spherical.f
detailed_content/: index.html
docs/: NR_util.md  detailed_content.md  index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
usage/: index.html
